# sntools

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE.md  MakeKin_supernova.py  README.md  channel.py  detectors.py  ene_rate_plots.py  energySpectrumPlot.py  energyTime_eventTime_Plot.py  es.py  es_.py  event.py  flux-garching.py  flux-totani.py  generate_fixed_n_data_set.py  genevts.py  ibd.py  nevt_calc.py  nue_es.py  o16nc_n_code.py  o16nc_p_code.py  pyproject.toml  requirements.txt  sample-in.txt  setup.py  test_xs.py  verification_plots.py
.github/workflows/: publish.yml  release.yml  test-and-lint.yml  test.yml  unittest.yml
doc/: documentation.bib  documentation.tex  paper.md
fluxes/: intp1301.data  intp2001.data  sample-gamma.txt
formats/: gamma.py  garching.py  nakazato.py  princeton.py  test_gamma.py  test_nakazato.py  totani.py
interaction-channels/: _example.py  es.py  ibd.py  o16e.py  oxy-nue.py
interaction_channels/: _example.py  c12e.py  c12eb.py  c12nc.py  es.py  ibd.py  o16e.py  o16e_old.py  o16eb.py  o16eb_old.py  test_c12e.py  test_c12eb.py  test_c12nc.py  test_es.py  test_ibd.py  test_o16e.py  test_o16eb.py
scripts/: add-time-to-reconstructed-evts.py  combine_csv.py  csv2nuance.py  do-in-parallel.py  generate-datasets-in-parallel.py  test_xs.py
sntools/: __init__.py  channel.py  detectors.py  event.py  genevts.py  transformation.py
sntools/formats/: __init__.py  gamma.py  nakazato.py  totani.py  (+2 more)
tests/: _crosssectiontest.py  sample_outfile.kin  test_c12e.py  test_c12eb.py  test_c12nc.py  test_detectors.py  test_es.py  test_formats.py  test_gamma.py  test_ibd.py  test_ibd_extended.py  test_nakazato.py  test_o16e.py  test_o16eb.py  test_o16nc_n.py  test_o16nc_p.py  test_ps.py
(+29 files in other folders)
